# AIPulseX

./: readme.md
2024-28/ChestX-rayClassification/: appp.py
2024-28/Face Recognition based login system/: app.py  auth.py  preview_server.py  pyproject.toml  test.py  utils.py
2024-28/Face Recognition based login system/data/: users.json
2024-28/Face Recognition based login system/data/embeddings/: Darkshadow.npy
2024-28/Face Recognition based login system/static/css/: auth.css
2024-28/Face Recognition based login system/static/js/: auth.js
2024-28/Face Recognition based login system/templates/: auth_ui.html  dashboard.html  login.html  register.html
2024-28/Hyd_Rainfall_Prediction/: app.py  clf_pipeline.pkl  reg_pipeline.pkl
2024-28/Music Genre Classification/: Model.keras  (+5 more)
2024-28/Taskify/: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
2024-28/Taskify/Backend/: Schedule_gen.py  auth.py  examples.txt  utils.py
2024-28/Taskify/Frontend/Templates/: activity_history.html  chat.html  dashboard.html  documents.html  index.html  login.html  logs.html  my_documents.html  my_documents_old.html  register.html  scheduler.html
2024-28/Taskify/Frontend/scripts/css/: style.css
2024-28/Taskify/Frontend/scripts/js/: main.js
Biometric_authentication/: BiometricAuthentication.ipynb  Readme.md
DeepLearning/: CNN_VGG.ipynb
Friend_Recommendation_System/: Readme.md
Hackathon_Submissions/: README.md
Innovate K12 /: README.md
MachineLearning/: Spam_Email_Detection.ipynb
image_classification_CNN/: CNN_py.ipynb  custom_cnn.h5  readme.md
(+148 files in other folders)
